@@ -23,6 +23,7 @@
 #include "defs.h"
 #include "arch-utils.h"
 #include "dis-asm.h"
+#include "floatformat.h"
 #include "frame.h"
 #include "frame-base.h"
 #include "frame-unwind.h"
@@ -475,6 +476,11 @@ vax_gdbarch_init (struct gdbarch_info info, struct gdbarch_list *arches)
     return arches->gdbarch;
 
   gdbarch = gdbarch_alloc (&info, NULL);
+
+  set_gdbarch_float_format (gdbarch, &floatformat_vax_f);
+  set_gdbarch_double_format (gdbarch, &floatformat_vax_d);
+  set_gdbarch_long_double_format (gdbarch, &floatformat_vax_d);
+  set_gdbarch_long_double_bit(gdbarch, 64);
 
   /* Register info */
   set_gdbarch_num_regs (gdbarch, VAX_NUM_REGS);
